<resources>
    <string name="app_name">Best Tic-Tac-Toe</string>
    <string name="action_settings">Settings</string>
    <string name="single_player_button">" Single Player "</string>
    <string name="two_player_button">" Two Players "</string>
    <string name="title_activity_game">Game</string>
    <string name="first_turn_human">Your move first</string>
    <string name="player1_turn">Player 1\'s Turn</string>
    <string name="human_turn">Your turn</string>
    <string name="computer_turn">Computer\'s turn</string>
    <string name="player2_turn">Player 2\'s Turn</string>
    <string name="result_human_wins">You Win!</string>
    <string name="result_player1_wins">Player 1 wins!</string>
    <string name="result_computer_wins">Computer Wins!</string>
    <string name="result_player2_wins">Player 2 wins!</string>
    <string name="result_tie">It\'s a tie!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="info">Info</string>
    <string name="human">Human:  </string>
    <string name="player1">Player 1:  </string>
    <string name="ties">Ties:  </string>
    <string name="computer">Computer:  </string>
    <string name="player2">Player 2:  </string>
    <string name="title1">The Best</string>
    <string name="title2">Tic-Tac-Toe</string>
    <string name="new_game">" New Game "</string>
</resources>
