<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alvin.example.com.tictactoe.GameFragment"
    tools:showIn="@layout/activity_game"
    android:background="#46b0f2">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/playArea">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRow1"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/one"
                android:id="@+id/one"
                android:textSize="120dp"
                android:width="130dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:id="@+id/two"
                android:layout_column="1"
                android:textSize="120dp"
                android:width="130dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:id="@+id/three"
                android:layout_column="2"
                android:textSize="120dp"
                android:width="130dp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRow2"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:id="@+id/four"
                android:textSize="120dp"
                android:width="130dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:id="@+id/five"
                android:layout_column="1"
                android:textSize="120dp"
                android:width="130dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:id="@+id/six"
                android:layout_column="2"
                android:textSize="120dp"
                android:width="130dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRow3"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:id="@+id/seven"
                android:textSize="120dp"
                android:width="130dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:id="@+id/eight"
                android:layout_column="1"
                android:textSize="120dp"
                android:width="130dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:id="@+id/nine"
                android:layout_column="2"
                android:textSize="120dp"
                android:width="130dp" />
        </TableRow>

        <TextView
            android:id="@+id/Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/info"
            android:textSize="50sp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/scoreBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/human"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/human"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/humanScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="30dp"
                    android:text="0" />

                <TextView
                    android:id="@+id/ties"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ties"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tiesCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="0"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/computer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/computer"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/computerScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="30dp"
                    android:text="0" />
            </TableRow>
        </TableLayout>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:id="@+id/newGameButton"
        android:layout_below="@+id/playArea"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:background="#ffffff"
        android:textSize="50dp" />

</RelativeLayout>
