<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alvin.example.com.tictactoe.StartFragment"
    tools:showIn="@layout/activity_start"
    android:background="#51c3f4">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_player_button"
        android:id="@+id/singlePlayerButton"
        android:layout_marginTop="138dp"
        android:layout_below="@+id/titleText"
        android:layout_centerHorizontal="true"
        android:textSize="60dp"
        android:background="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_player_button"
        android:id="@+id/twoPlayerButton"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/singlePlayerButton"
        android:layout_centerHorizontal="true"
        android:textSize="65dp"
        android:background="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title2"
        android:id="@+id/titleText"
        android:layout_marginTop="169dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title1"
        android:id="@+id/title"
        android:textStyle="bold"
        android:textSize="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp" />
</RelativeLayout>
